--- a/src/plusplugins/_misc/styles.css
+++ b/src/plusplugins/_misc/styles.css
@@ -1,8 +1,8 @@
 .plugin-warning {
     font-size: 16px !important;
-    background-color: var(--info-warning-background) !important;
+    background-color: var(--background-feedback-warning) !important;
     color: var(--info-warning-text) !important;
-    border: 1px solid var(--info-warning-foreground) !important;
+    border: 1px solid var(--text-feedback-warning) !important;
     border-radius: 5px !important;
     font-weight: bold;
     padding: 6px 10px;
