--- a/src/plusplugins/friendNotifications/settings.css
+++ b/src/plusplugins/friendNotifications/settings.css
@@ -18,7 +18,7 @@
 }
 
 .friend-notifications-settings-username {
-    color: var(--text-normal);
+    color: var(--text-default);
 }
 
 .friend-notifications-settings-discriminator {
