Update CSS and something else

--- a/src/plusplugins/FriendCodes/components/styles.css
+++ b/src/plusplugins/FriendCodes/components/styles.css
@@ -5,7 +5,7 @@
   border-style: solid;
   border-radius: 5px;
   border-color: var(--background-tertiary);
-  background-color: var(--background-secondary);
+  background-color: var(--base-lower);
 }
 
 .vc-friend-codes-card-title span {
