--- a/src/plusplugins/soundTriggers/components/styles.css
+++ b/src/plusplugins/soundTriggers/components/styles.css
@@ -60,7 +60,7 @@
 }
 
 .vc-st-more-button {
-    background-color: var(--background-secondary);
+    background-color: var(--base-lower);
     color: var(--header-secondary);
 }
 
