--- a/src/plusplugins/betterActivities/styles.css
+++ b/src/plusplugins/betterActivities/styles.css
@@ -41,7 +41,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    background: var(--background-secondary-alt);
+    background: var(--base-lower-alt);
     border-radius: 3px;
     flex: 1 0;
     margin-top: 10px;
@@ -91,5 +91,5 @@
 }
 
 .vc-bactivities-controls-tooltip {
-    --background-floating: var(--background-secondary);
+    --background-floating: var(--base-lower);
 }
