Enhance ESLint configuration and TypeScript settings
- Updated ESLint configuration to ignore additional plugin files.
- Refined TypeScript configuration for improved path handling and included necessary files.
- Made minor code style adjustments across various plugins for consistency.
- Added keys to mapped components in React to prevent potential rendering issues.
- Improved CSS styles for better layout and visual consistency.

--- a/src/plusplugins/Kyuuhachi's userplugins/ColorMessage/style.css
+++ b/src/plusplugins/Kyuuhachi's userplugins/ColorMessage/style.css
@@ -1,11 +1,11 @@
 :root {
-    --98-message-color-saturation: /*DYNAMIC*/;
+    --message-color-saturation-98:
+        /*DYNAMIC*/
+    ;
 }
 
 div[class*="messageContent_"] {
-    color: color-mix(
-        in lab,
-        var(--98-message-color, var(--text-default)) calc(var(--98-message-color-saturation) * 1%),
-        var(--text-default)
-    )
+    color: color-mix(in lab,
+            var(--message-color-98, var(--text-default)) calc(var(--message-color-saturation-98) * 1%),
+            var(--text-default))
 }
