--- a/src/plusplugins/ThemeLibrary/components/styles.css
+++ b/src/plusplugins/ThemeLibrary/components/styles.css
@@ -123,7 +123,7 @@
 }
 
 .vce-divider-border {
-  border-bottom: thin solid var(---border-subtle);
+  border-bottom: thin solid var(--border-subtle);
   padding: 10px 0;
   width: 100%;
 }
