--- a/src/plusplugins/lotOfBanners/index.css
+++ b/src/plusplugins/lotOfBanners/index.css
@@ -2,10 +2,8 @@
     background: center / cover no-repeat;
 }
 
-[class*="NonPremium"]:has([class*="bannerPremium"])
-    [class*="avatarPositionNormal"],
-[class*="PremiumWithoutBanner"]:has([class*="bannerPremium"])
-    [class*="avatarPositionPremiumNoBanner"] {
+[class*="NonPremium"]:has([class*="bannerPremium"]) [class*="avatarPositionNormal"],
+[class*="PremiumWithoutBanner"]:has([class*="bannerPremium"]) [class*="avatarPositionPremiumNoBanner"] {
     top: 76px;
 }
 
@@ -15,7 +13,6 @@
 
 [style^="--lob-bg"]:not([style^='--lob-bg:url("");'])::before {
     opacity: 0.8;
-    -webkit-mask-image: linear-gradient(to right, transparent 20%, #fff);
     mask-image: linear-gradient(to right, transparent 20%, #fff);
     width: 100%;
     height: 96%;
@@ -33,10 +30,9 @@
 }
 
 [style^="--lob-bg"]:has(::before):hover > [class*="layout"] {
-    background-color: none;
+    background-color: transparent;
 }
 
-[style^="--lob-bg"]:not([style^='--lob-bg:url("");']):hover
-    > [class*="layout"] {
+[style^="--lob-bg"]:not([style^='--lob-bg:url("");']):hover > [class*="layout"] {
     background-color: #0000007e !important;
 }
